fix: 🐛 修改新建模板选择框点击取消报错的问题

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "git-cz": "^4.9.0",
     "html-webpack-plugin": "^5.3.1",
     "less": "^2.7.3",
     "less-loader": "^9.1.0",
@@ -83,7 +84,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/git-cz"
     }
   }
 }
