fix: 🐛 兼容win的环境变量

--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "RUN_ENV=csr nodemon --files ./app/server/master.ts",
+    "dev": "cross-env RUN_ENV=csr nodemon --files ./app/server/master.ts",
     "front:prod": "node ./scripts/frontprod.js",
     "server:build": "tsc --sourcemap false",
     "view:build": "node ./scripts/view-build.js",
     "front": "node ./scripts/front.js",
     "start": "READ_ENV=prod pm2 start ./package/server/index.js",
     "stop": "pm2 stop ./package/server/index.js",
-    "load": "READ_ENV=prod node ./package/server/index.js",
+    "load": "cross-env READ_ENV=prod node ./package/server/index.js",
     "agant": "RUN_ENV=csr nodemon --files ./app/server/agant.ts",
     "launch": "READ_ENV=prod node ./package/server/agant.js",
     "log": "standard-version"
@@ -30,6 +30,7 @@
     "antd": "^4.15.0",
     "art-template": "^4.13.2",
     "axios": "^0.21.1",
+    "cross-env": "^7.0.3",
     "import-html-entry": "^1.11.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
